--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,19 +1,31 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: calbar-c <calbar-c@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/10/29 18:58:39 by calbar-c          #+#    #+#              #
+#    Updated: 2024/10/29 18:58:47 by calbar-c         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libft.a
 
 SOURCES = \
-		  ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
-		  ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c \
-		  ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
-		  ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
-		  ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c \
-		  ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c \
-		  ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
-		  ft_putendl_fd.c ft_putnbr_fd.c ft_islower.c ft_isupper.c \
-		  ft_strcmp.c ft_strstr.c ft_lstnew.c ft_lstadd_front.c ft_lstsize.c \
-		  ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
-		  ft_lstiter.c ft_lstmap.c printf/ft_printf.c \
-		  printf/ft_printf_utils.c printf/ft_printhexa.c \
-		  printf/ft_print_ptr.c printf/ft_print_unsigned.c
+		ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
+		ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c \
+		ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
+		ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
+		ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c \
+		ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c \
+		ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
+		ft_putendl_fd.c ft_putnbr_fd.c ft_islower.c ft_isupper.c \
+		ft_strcmp.c ft_strstr.c ft_lstnew.c ft_lstadd_front.c ft_lstsize.c \
+		ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
+		ft_lstiter.c ft_lstmap.c printf/ft_printf.c \
+		printf/ft_printf_utils.c printf/ft_printhexa.c \
+		printf/ft_print_ptr.c printf/ft_print_unsigned.c
 
 OBJECTS = $(SOURCES:.c=.o)
 
